2016-08-19	"...then lobbest thou thy Holy Hand Grenade of Antioch
		 towards thy foe..."

		bin/innocent-pear-dogecoin.cc :
		- now correctly fishes out section group signatures
		- no longer frobs relocations in link-once sections, group
		  information sections, or group members
		  members

		bin/innocent-pear-c++.cc :
		- now also passes share/innocent-pear/doge-i.ld (with -T) to
		  linker back-end

		bin/innocent-pear-doge.cc :
		- no longer tries to scramble group information sections

		test/test-doge-eh.cc ,
		test/test-doge-eh.good :
		- added new test case; currently fails for x86-64 target

		share/innocent-pear/doge-i.ld :
		- initial version

		share/innocent-pear/doge-n.ld :
		- renamed from share/innocent-pear/doge.ld

		GNUmakefile :
		- updated to use doge-i.ld and doge-n.ld
		- added test-doge-eh test case

		.gitignore :
		- added test-doge-eh and *.debug patterns

2016-08-18	"Don't panic."

		README.md :
		- updated list of bugs :(

2016-08-17	Some provisions for debugging...

		bin/innocent-pear-c++.cc :
		- now accepts `-Xinnocent-pear -debug-doge' option

		include/innocent-pear/rofl.h :
		- now recognizes and acts on innocent_pear_DEBUG macro

		share/innocent-pear/doge-01.cc :
		- moved test of innocent_pear_DEBUG macro to rofl.h
		- upped layers of operand scrambling

		GNUmakefile :
		- added rules for building test-doge and test-doge-abs-reloc
		  test cases in debug mode

		.travis.yml ,
		infra/travis-build-and-check.sh ,
		infra/travis-install-deps.sh :
		- test/infra/ -> infra/

2016-08-16	Fixed one relocation handling bug.  More bugs to go...

		bin/innocent-pear-dogecoin.cc :
		- now uses in-place relocation addends whenever possible,
		  when creating new pc-relative relocations

		GNUmakefile :
		- `make clean' now also removes *.pear.t.?????? temporaries

		share/innocent-pear/doge-03.cc :
		- tweaked code formatting

		include/innocent-pear/rofl.h :
		- hopefully fixed register assignment for 3-argument