@@ -59,6 +59,10 @@ static void prep_sxn(bfd *ibfd, asection *isxn, void *cookie)
 	std::ostringstream oss;
 	wow("  ", name, ": vma 0x", std::hex, vma,
 	    ", lma 0x", lma, ", size 0x", size);
+	if ((flags & SEC_GROUP) != 0)
+		many("unexpected section group");
+	if ((flags & SEC_LINK_ONCE) != 0)
+		many("unexpected link-once section");
 	asection *osxn = bfd_make_section_anyway_with_flags(obfd,name,flags);
 	if (!osxn)
 		much("bfd_make_section_anyway_with_flags");
@@ -215,15 +219,13 @@ static void copy_sxn(bfd *ibfd, asection *isxn, void *cookie)
 	flagword fl = bfd_get_section_flags(ibfd, isxn);
 	if ((fl & (SEC_HAS_CONTENTS | SEC_RELOC)) == 0)
 		return;
-	if ((fl & SEC_GROUP) == 0) {
-		bfd_size_type sz = bfd_section_size(ibfd, isxn);
-		if (sz) {
-			unsigned char stuff[sz];
-			if (!bfd_get_section_contents(ibfd,isxn,stuff,0,sz))
-				much("bfd_get_section_contents");
-			if (!bfd_set_section_contents(obfd,osxn,stuff,0,sz))
-				much("bfd_set_section_contents");
-		}
+	bfd_size_type sz = bfd_section_size(ibfd, isxn);
+	if (sz) {
+		unsigned char stuff[sz];
+		if (!bfd_get_section_contents(ibfd, isxn, stuff, 0, sz))
+			much("bfd_get_section_contents");
+		if (!bfd_set_section_contents(obfd, osxn, stuff, 0, sz))
+			much("bfd_set_section_contents");
 	}
 	if ((fl & SEC_RELOC) == 0)
 		return;
